fix(toolbar): toolbar jumps when using zippys

--- a/app/modules/common/header/defaultheader.scss
+++ b/app/modules/common/header/defaultheader.scss
@@ -5,11 +5,15 @@
     z-index: 999;
     width: 100%;
     position: relative;
+
 }
 
 .cc-supports-position-fixed{
     .cc-header{
         position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
     }
 }
 
